# gherkin-generator

./: .env.example  .gitignore  README.md  app.py  browse_agent.py  config.py  main.py  playwright_mcp_client.py  pyproject.toml  test_playwright_mcp.py  workflow.py  workflow_service.py
.cursor/rules/: project-general-instructions.mdc
documentation/: gemini-api-setup.md  playwright-mcp-docker-setup.md  playwright-recording.md
prompts/: bullet_list_to_gherkin.txt  playwright_to_bullet_list.txt
