[project]
name = "gherkin-generator"
version = "0.1.0"
description = "Convert Playwright recordings to Gherkin tests using LangGraph"
authors = [{ name = "Hugues Blanco Alvarez" }]
dependencies = [
    "langgraph",
    "langchain-google-genai",
    "python-dotenv",
    "langchain-core",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
